2025-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_sugar.R: For r-devel, use apply(x, DIM, mean,
	na.rm=TRUE) instead of (row|col)Means for complex NA valued matrices

2025-08-24  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Re-enable coverage, roll checkout
	action to v5

	* inst/tinytest/test_sugar.R: For now, park two tests of complex
	matrix row and col means under R-devel, this could be a R-devel issue

2025-07-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* R/compilerCheck.R: Remove unused function
	* man/compilerCheck.Rd: Remove its documentation

2025-07-19  Dirk Eddelbuettel  <edd@debian.org>

        * vignettes/rmd/Rcpp.bib: Use DOI for R citation
        * inst/bib/Rcpp.bib: Idem

2025-07-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* R/asis.R (asisWeave, asisTangle): Borrowed with thanks from R.rsp
	and shortened / simplified to provide 'asis' vignette processor
	* R/zzz.R (.onLoad): Register new vignette processor
	* vignettes/*.asis: New files with vignette info from .Rnw files
	* vignettes/pdf/*.pdf: Moved to directory vignettes/
	* vignettes/*.Rnw: Removed
	* man/asisWeave.Rd: Documentation

2025-07-01  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Date, Version): Release 1.1.0

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem
        * vignettes/rmd/Rcpp.bib: Idem
        * inst/bib/Rcpp.bib: Idem
	* vignettes/pdf/*: Rebuilt

2025-06-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

2025-06-18  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/Rcpp.bib: Use doi references for CRAN packages,
	update versions, update some package titles
	* inst/bib/Rcpp.bib: Idem