@@ -1,3 +1,11 @@
+2025-09-04  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll micro version and date
+	* inst/include/Rcpp/config.h: Idem
+
+	* inst/include/Rcpp/internal/wrap.h (make_charsexp__impl__cstring):
+	Avoid a narrowing warning by casting explicitly
+
 2025-08-26  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/tinytest/test_sugar.R: For r-devel, use apply(x, DIM, mean,
